[package]
name = "simple-cache"
version = "0.1.0"
edition = "2021"
rust-version = "1.68.0"

description = "A simple, minimal mapped interner"
repository = "https://github.com/CAD97/simple-cache"
keywords = []
categories = ["caching"]
license = "Apache-2.0 OR MIT"

[badges]
maintenance = { status = "as-is" }
